<resources>
    <string name="app_name">Smart Plug</string>
    <string name="corp_name">Thingzdo Corp.</string>
    <string name="version_notify">"Copyright reserved"</string>
    <string name="version_right">Copyright © 2015 Thingzdo Corp. All Rights Reserved</string>
    <string name="action_settings">Settings</string>
    <string name="smartplug_logo">Smart Plug</string>
    <string name="smartplug_city">City</string>
    <string name="smartplug_company_web">Company Web</string>
    <string name="smartplug_speek_time">Timer</string>
    <string name="smartplug_company_web_address">http://www.thingzdo.com</string>
    <string name="smartplug_service_phone">Service Phone</string>
    <string name="smartplug_service_phone_number">400-123-456</string>
    <string name="smartplug_warning">Warning</string>
    <string name="smartplug_ok">OK</string>
    <string name="smartplug_cancel">Cancel</string>
    <string name="smartplug_esc">Exit</string>
    <string name="smartplug_refresh">Refresh</string>
    <string name="smartplug_yes">Yes</string>
    <string name="smartplug_no">No</string>
    <string name="week">Week</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="Saturday">Saturday</string>
    <string name="DateTimeFormat">MM/dd</string>
    <string name="Datetime_Short">dd/MM HH:mm:ss</string>
    <string name="DateTime_show_format">M/d/yyyy HH:mm:ss</string>
    <string name="DateTime_db_format">MM/dd/yyyy HH:mm:ss</string>
    <string name="smartplug_about">About</string>
    <string name="phone_number_error">Error phone number format</string>
    <string name="smartplug_goback">Back</string>
    <string name="smartplug_exit">Confirm to exit?</string>
    <string name="smartplug_logout">Login out</string>
    <string name="smartplug_reset">Reset</string>
    <string name="smartplug_confirm">Confirm</string>
    <string name="smartplug_commit">Commit</string>
    <string name="smartplug_start_now">Start now</string>
    <string name="smartplug_shake_shake">Shake Shake</string>
    <string name="smartplug_wifi_login">WiFi Login</string>
    <string name="smartplug_wifi_notopen">WiFi not opened</string>
    <string name="smartplug_serverip_hangzhou">HangZhou server</string>
    <string name="smartplug_serverip_shenzhen">ShenZhen server</string>
    <string name="smartplug_serverip_debug">Debug server</string>
    <string name="tabhost_favorite">Favorite</string>
    <string name="tabhost_control">Control</string>
    <string name="tabhost_query">Query</string>
    <string name="tabhost_manage">Manage</string>
    <string name="tabhost_settings">Settings</string>
    <string name="login_register">Register</string>
    <string name="login_login">Login</string>
    <string name="login_logining">Logining...</string>
    <string name="login_wellcome">Wellcome %s, </string>
    <string name="login_inputuser">Please input user name</string>
    <string name="login_inputpwd">Please input password</string>
    <string name="login_savepwd">Keep password</string>
    <string name="login_pwd_error">Password is error</string>
    <string name="login_pwd_findback">Forget password?</string>
    <string name="login_pwd_sent">Password had been sent to </string>
    <string name="login_pwd_findconfirm_sms">Comfirm to send SMS?</string>
    <string name="login_pwd_findconfirm_email">Confirm to send email?</string>
    <string name="login_pwd_network_invalid">Network is invalid</string>
    <string name="login_pwd_wifi_notopen">WiFi is not opened</string>
    <string name="login_pwd_network_connect">open wifi or data connection</string>
    <string name="login_pwd_sendemail">eMail</string>
    <string name="login_pwd_sendsms">Sms</string>
    <string name="login_info_no_internet">No internet</string>
    <string name="login_info_no_email">No email</string>
    <string name="login_info_no_phone">No phone</string>
    <string name="login_timeout">Connect server timeout, please ensure it connected internet</string>
    <string name="login_timeout_devices">Connect device is timeout</string>
    <string name="login_cmd_socket_timeout">Connect server fail, please ensure it connected internet</string>
    <string name="login_cmd_socket_timeout_devices">Connect device is timeout</string>
    <string name="login_input_email">Please input email</string>
    <string name="login_pwd_send_email_ok">Password sent to email</string>
    <string name="login_logout">Logout</string>
    <string name="login_shake_addplug">"Add plug"</string>
    <string name="login_shake_enter">"Enter shake"</string>
    <string name="login_shake_scaning">"Scaning..."</string>
    <string name="register_title_register">User Register</string>
    <string name="register_title_modify">Modify User Information</string>
    <string name="register_username">User Name</string>
    <string name="register_appphonenumber">Local Phone</string>
    <string name="register_pwd">Password</string>
    <string name="register_confirmpwd">Password Confirm</string>
    <string name="register_email">EMail</string>
    <string name="register_pwdfindSIM">Find Pwd SIM</string>
    <string name="register_carSIM">Car\'s SIM</string>
    <string name="register_carPhoto">Car\'s Photo</string>
    <string name="register_carnumber">Car\'s Number</string>
    <string name="register_carmoduleid">Car\'s ModuleId</string>
    <string name="register_carserialno">Car\'s Serial No</string>
    <string name="register_info_nousername">User name is empty</string>
    <string name="register_info_noappphone">Phone number is empty</string>
    <string name="register_info_nopwd">PWD is empty</string>
    <string name="register_info_noconfirmpwd">Confirm PWD is empty</string>
    <string name="register_info_noemail">eMail is empty</string>
    <string name="register_info_invalidemail">Invalid email address</string>
    <string name="register_info_pwdconfirmerror">PWD is not same</string>
    <string name="register_info_nomodulephone">No module phone number</string>
    <string name="register_info_nofindpwdandemail">No find PWD phone number or Email</string>
    <string name="register_info_nofindpwdphoneandemail">No Find PWD phone number or Email</string>
    <string name="register_info_nocarnumber">No car number</string>
    <string name="register_info_lessthansixchar">Password can not be less than 6 characters</string>
    <string name="register_info_morethantwentychar">Password can not be more than 20 characters</string>
    <string name="register_info_pwdinvalid">Password must be digital or characters</string>
    <string name="register_info_selectoption">Please select</string>
    <string name="register_info_modify">Modify</string>
    <string name="register_info_delete">Delete</string>
    <string name="register_photo_by_camera">Photograph</string>
    <string name="register_photo_by_gallery">Select Picture</string>
    <string name="register_photo_del">Delete</string>
    <string name="register_network_vaild">Please add or modify information in internet.</string>
    <string name="register_no_moduleid">Module ID is empty</string>
    <string name="register_no_right">No right</string>
    <string name="register_register_now">Registering...</string>
    <string name="smartplug_title_control">Control</string>
    <string name="smartplug_title_query">Query</string>
    <string name="smartplug_title_manage">Manage</string>
    <string name="smartplug_title_settings">Settings</string>
    <string name="smartplug_title_plug_detail">Detail</string>
    <string name="smartplug_title_log">Log</string>
    <string name="sendcmd_command_sending">Sending command...</string>
    <string name="sendcmd_command_sent">Command bad been sent</string>
    <string name="sendcmd_command_invalid">Invalid command</string>
    <string name="protocol_config">Plug Protocol</string>
    <string name="protocol_tcp">TCP</string>
    <string name="protocol_udp">UDP</string>
	<string name="app_response_not_register">User is not exist</string>
	<string name="app_response_password_error">Password error</string>
	<string name="app_response_plug_noresponse">Plug no response</string>
	<string name="app_response_user_exist">User exist</string>
	<string name="app_response_invalid_string">Invalid command to server</string>
	<string name="app_response_user_logined">User logined</string>
	<string name="app_response_plug_not_exist">Plug is not exist</string>
	<string name="app_response_plug_been_assigned">Plug is assigned to others</string>
	<string name="app_response_user_no_plug">The plug not belong to you</string>
	<string name="app_response_plug_name_exist">Plug name repeat</string>
	<string name="app_response_plug_add_timer_fail">Add timer fail</string>
	<string name="app_response_plug_mod_timer_fail">Modify timer fail</string>
	<string name="app_response_plug_del_timer_fail">Delete timer fail</string>
	<string name="app_response_plug_offline">Plug is offline</string>
	<string name="app_response_pwd_email_error">Eamil error</string>
	<string name="app_response_email_registered">Emai had been registered</string>
	<string name="app_response_unknown_error">Unknown error</string>
	<string name="app_response_login_fail">"Login server fail"</string>
	<string name="app_response_login_fail_devices">"Smart Device login failed"</string>
	<string name="app_response_device_online">"Device online"</string>
	<string name="app_response_device_offline">"Device offline"</string>
	<string name="server_response_fail_to_insert_db">Server write db fail</string>
	<string name="server_response_fail_to_update_db">Server update db fail</string>
	<string name="server_response_fail_to_send_pwd_email">Server send pwd email fail</string>
	<string name="txt_plug_poweroff">Power off</string>
    <string name="txt_plug_poweron">Power on</string>
    <string name="txt_plug_poweron_attime">Power on on time</string>
    <string name="txt_plug_poweroff_attime">Power off on time</string>
    <string name="str_del_one_socket">Delete plug</string>
    <string name="str_add_one_socket">Add plug</string>
    <string name="str_query_electricity">Power stat.</string>
    <string name="str_query_fee">Power fee calc.</string>
    <string name="str_connect_socket_wifi">Step 1: Connect to plug</string>
    <string name="str_init_socket">Step 2: Start plug</string>
    <string name="add_plug_name">Plug name</string>
    <string name="add_plug_mac">MAC of plug</string>
    <string name="app_feedback_contactmode">"Phone/Email"</string>
    <string name="app_feedback_content">Please input your advice</string>
    <string name="str_btn_curtainopen">Open</string>
    <string name="str_btn_curtainclose">Close</string>
    <string name="str_btn_curtainpause">Pause</string>
    <string name="str_btn_curtaininit">Init</string>
    <string name="str_introduct_curtain_max_length">"Setting openned curtain's max length(%)"</string>
    <string name="str_introduct_curtain_init">"When using curtain first, or move curtain position by hand, please press Init Button."</string>
    <string name="str_wireless_controller">WiFi Controller: </string>
    <string name="str_btn_all_poweron">Open All</string>
    <string name="str_btn_all_poweroff">Close All</string>
    <string name="str_btn_adjust_cool">Tone Cool</string>
    <string name="str_btn_adjust_warm">Tone Warm</string>
    <string name="str_btn_light_bright">Light Bright</string>
    <string name="str_btn_light_dark">Light Dark</string>
    <string name="str_btn_group_1">Group One</string>
    <string name="str_btn_group_2">Group Two</string>
    <string name="str_btn_group_3">Group Three</string>
    <string name="str_btn_group_4">Group Four</string>
    <string name="str_btn_group_poweron">Open</string>
    <string name="str_btn_group_poweroff">Close</string>
</resources>