<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/commom_bg_color">
    
    <include
          android:id="@+id/commontitlebar"  
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          layout="@layout/view_common_titlebar"
          android:layout_alignParentTop="true"/>   
          
    <RelativeLayout
        android:id="@+id/rl_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/commontitlebar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"	         
        android:background="@color/commom_bg_color"
        android:layout_gravity="center">
            
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical">
		    
		    <LinearLayout
			    android:id="@+id/ll_route_tip"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="horizontal" >
			
				<TextView
				    android:layout_width="100dp"
				    android:layout_height="wrap_content"
				    android:textSize="15sp"
				    android:text="@string/str_wireless_controller"
				    android:textColor="@color/black"/>
				
				<TextView
				    android:id="@+id/tv_wifiinfo"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:textSize="15sp" 
				    android:textColor="@color/black"
				    android:text="@null"/>
				
			</LinearLayout>
		</LinearLayout>    
	    
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="vertical" >
		    
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_marginTop="20dp"
	            android:layout_marginBottom="20dp"
	            android:layout_marginLeft="50dp"
	            android:layout_marginRight="50dp"
	            android:orientation="vertical" >
			 
				<Button
			        android:id="@+id/btn_windowopen"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp"
			        android:background="@drawable/btn_selector" 
			        android:textColor="@color/white"
	       			android:textSize="@dimen/text_size_larsamll"
	       			android:layout_centerInParent="true"
			        android:text="@string/str_btn_curtainopen" />
				
				<Button
			        android:id="@+id/btn_windowpause"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp"
			        android:background="@drawable/btn_selector"  
			        android:textColor="@color/white"
	       			android:textSize="@dimen/text_size_larsamll"
	       			android:layout_centerInParent="true"
			        android:text="@string/str_btn_curtainpause" />
				
				<Button
			        android:id="@+id/btn_windowclose"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp"
			        android:background="@drawable/btn_selector"  
			        android:textColor="@color/white"
	       			android:textSize="@dimen/text_size_larsamll"
	       			android:layout_centerInParent="true"
			        android:text="@string/str_btn_curtainclose" />
				
				<TextView 
				    android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:textColor="@color/black"
	       			android:textSize="@dimen/text_size_midsamll"
	       			android:text="@string/str_introduct_curtain_max_length" />
				
				<RelativeLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
					android:layout_marginTop="10dp"
		            android:orientation="horizontal" >"

					<TextView
					    android:id="@+id/tv_curtain_max_length"
					    android:layout_width="30dp"
					    android:layout_height="wrap_content"
					    android:layout_alignParentEnd="true"
					    android:layout_alignParentRight="true"
					    android:layout_centerVertical="true"
					    android:text="@null"
					    android:textColor="@color/black"
					    android:textSize="@dimen/text_size_midsamll" />
					
					<SeekBar
					    android:id="@+id/sb_curtain_max_length"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"
					    android:layout_toLeftOf="@id/tv_curtain_max_length"
					    android:focusable="true"
					    android:max="100"
					    android:maxHeight="10dp"
					    android:minHeight="10dp"
					    android:paddingLeft="15dip"
					    android:paddingRight="15dip"
					    android:progress="0"
					    android:progressDrawable="@drawable/po_seekbar_red"
					    android:thumb="@drawable/seekbar_thumb" />
					
				</RelativeLayout>
				
				<TextView 
				    android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="10dp"
			        android:textColor="@color/black"
	       			android:textSize="@dimen/text_size_midsamll"
	       			android:text="@string/str_introduct_curtain_init" />
				
				<Button
			        android:id="@+id/btn_windowinit"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_marginTop="20dp"
			        android:background="@drawable/btn_selector"  
			        android:textColor="@color/white"
	       			android:textSize="@dimen/text_size_larsamll"
	       			android:layout_centerInParent="true"
			        android:text="@string/str_btn_curtaininit" />
		    </LinearLayout>
		    
	    </LinearLayout>
	    
	</RelativeLayout>
</RelativeLayout>